--- a/index.html
+++ b/index.html
@@ -36,6 +36,16 @@
     <script src="test/countAllPaarl.test.js" charset="utf-8"></script>
     <script src="countAllFromTown.js" charset="utf-8"></script>
     <script src="test/countAllFromTown.test.js" charset="utf-8"></script>
+    <script src="transportFee.js" charset="utf-8"></script>
+    <script src="test/transportFee.test.js" charset="utf-8"></script>
+    <script src="totalPhoneBill.js" charset="utf-8"></script>
+    <script src="test/totalPhoneBill.test.js" charset="utf-8"></script>
+    <script src="fromWhere.js" charset="utf-8"></script>
+    <script src="test/fromWhere.test.js" charset="utf-8"></script>
+    <script src="findItemsOver20.js" charset="utf-8"></script>
+    <script src="test/findItemsOver20.test.js" charset="utf-8"></script>
+    <script src="findItemsOver.js" charset="utf-8"></script>
+    <script src="test/findItemsOver.test.js" charset="utf-8"></script>
     <script>
         // configure and run mocha
         mocha.checkLeaks();
